src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --nav-height: 48px;
}

:root {
  --background-color: #fff;
  --text-color: #333;
  --text-color-secondary: #a8a8a8;
  --text-color-invert: #fff;
  --anchor-text-color: #2563eb;
  --anchor-button-color: var(--text-color);
  --modal-background-color: #cecececc;
  --primary-color: #3b82f6;
  --secondary-color: #06b6d4;
  --neutral-color: #6b7280;
  --wordle-correct-color: #6aaa64;
  --wordle-present-color: #c9b458;
  --wordle-absent-color: #787c7e;
  --wordle-exact-color: #fff;
  --wordle-exact-background-color: #6aaa64;
  --keyboard-background-color: #d1d5da;
  --keyboard-text-color: var(--text-color);
  --keyboard-text-color-invert: var(--text-color-invert);
  --keyboard-correct-color: var(--wordle-correct-color);
  --keyboard-present-color: var(--wordle-present-color);
  --keyboard-absent-color: var(--wordle-absent-color);
  --alert-background-color: #f7f7f7;
}

:root.dark-theme {
  --background-color: #292c34;
  --text-color: #cbd5e1;
  --text-color-secondary: #555;
  --text-color-invert: #333;
  --anchor-text-color: #3b82f6;
  --anchor-button-color: var(--text-color);
  --modal-background-color: #222222cc;
  --primary-color: #3b82f6;
  --secondary-color: #0891b2;
  --neutral-color: #94a3b8;
  --wordle-correct-color: #538d4e;
  --wordle-present-color: #b59f3b;
  --wordle-absent-color: #787c7e;
  --wordle-exact-color: #333;
  --wordle-exact-background-color: #538d4e;
  --keyboard-background-color: #7a7c7e;
  --keyboard-text-color: #f2f2f2;
  --keyboard-text-color-invert: var(--keyboard-text-color);
  --keyboard-correct-color: var(--wordle-correct-color);
  --keyboard-present-color: var(--wordle-present-color);
  --keyboard-absent-color: #484848;
  --alert-background-color: #373b46;
}

* {
  box-sizing: border-box;
}

html,
body {
  position: relative;
  width: 100%;
  height: 100%;

  overflow: hidden;
  touch-action: manipulation;
  overscroll-behavior-y: none;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Noto, Cantarell, 'Helvetica Neue', Helvetica, Arial,
    'Source Han Sans', 'Noto Sans KR', 'Apple SD Gothic Neo',
    'Apple SD 산돌고딕 Neo', 'Nanum Gothic', '나눔고딕', 'Malgun Gothic',
    '맑은고딕', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
}

body.modal-open {
  overflow: hidden;
  position: fixed;
}

a {
  color: var(--anchor-text-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.btn {
  color: var(--anchor-button-color);
}

.btn:not(:disabled):hover {
  filter: brightness(0.8) contrast(1.2);
}

.btn:disabled {
  filter: brightness(0.6);
  cursor: not-allowed;
}

